<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LicenceKeyActivity" >

    <TextView
        android:id="@+id/authorisationBannerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#888"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/banner_title_not_authorised"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

       <EditText
           android:id="@+id/secretEditText"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_alignParentRight="true"
           android:layout_alignParentTop="true"
           android:ems="10"
           android:gravity="center_vertical|center_horizontal"
           android:hint="@string/secret_placeholder_text"
           android:inputType="textNoSuggestions" >

        </EditText>

        <TextView
            android:id="@+id/authorisationSecretTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/secretEditText"
            android:layout_centerHorizontal="true"
            android:text="@string/secret_title"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#888"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/onlyRespondToAuthorisedReadersCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/authoriseDescriptionTextView"
            android:layout_marginTop="4dp"
            android:checked="true"
            android:text="@string/only_authorised_readers_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/authorisedReaderDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/onlyRespondToAuthorisedReadersCheckBox"
            android:layout_below="@+id/onlyRespondToAuthorisedReadersCheckBox"
            android:gravity="center_horizontal"
            android:text="@string/authorised_reader_description"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#888"
            android:textSize="12sp" />

        <Button
            android:id="@+id/inventoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/authorisedReaderDescriptionTextView"
            android:layout_marginTop="4dp"
            android:minHeight="18dp"
            android:text="@string/inventory_button_text"
            android:textSize="16sp" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/inventoryButton"
            android:layout_alignBottom="@+id/inventoryButton"
            android:layout_centerHorizontal="true"
            android:minHeight="18dp"
            android:text="@string/clear_button_text"
            android:textSize="16sp" />

        <Button
            android:id="@+id/barcodeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/clearButton"
            android:layout_alignBottom="@+id/clearButton"
            android:layout_alignParentRight="true"
            android:minHeight="18dp"
            android:text="@string/barcode_button_text"
            android:textSize="16sp" />

        <ListView
            android:id="@+id/resultListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/inventoryButton"
            android:background="#ccc" >

        </ListView>

        <TextView
            android:id="@+id/authorisationSecretDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/authorisationSecretTitleTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal"
            android:text="@string/secret_description"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#888"
            android:textSize="12sp" />

        <Button
            android:id="@+id/authoriseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/authorisationSecretDescriptionTextView"
            android:layout_marginTop="8dp"
            android:layout_toLeftOf="@+id/layoutTextView1"
            android:minHeight="40dp"
            android:text="@string/authorise_button_text"
            android:textSize="16sp" />

        <Button
            android:id="@+id/deAuthoriseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/authoriseButton"
            android:layout_alignBottom="@+id/authoriseButton"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/layoutTextView1"
            android:minHeight="40dp"
            android:text="@string/de_authorise_button_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/authoriseDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/authoriseButton"
            android:layout_alignRight="@+id/authoriseButton"
            android:layout_below="@+id/authoriseButton"
            android:gravity="center_horizontal"
            android:paddingRight="8dp"
            android:text="@string/authorise_description"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#888"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/deAuthoriseDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/deAuthoriseButton"
            android:layout_alignRight="@+id/deAuthoriseButton"
            android:layout_below="@+id/deAuthoriseButton"
            android:layout_toRightOf="@+id/clearButton"
            android:gravity="center_horizontal"
            android:paddingLeft="8dp"
            android:text="@string/de_authorise_description"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#888"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/layoutTextView1"
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/deAuthoriseButton"
            android:layout_alignBottom="@+id/deAuthoriseButton"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>

</LinearLayout>